Preparación de pantalla uno, con los landmark1 y 2 que son la barra de invegacion inferior y la toolbar superior. Aún queda resolver el porque se solapan el fragment y el toolbar.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Trabajo 1</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_inicio">Inicio</string>
+    <string name="title_chat">Chat</string>
+    <string name="title_consejo">Consejo</string>
+    <string name="title_mas">Más</string>
+    <string name="title_hora">01:39</string>
+    <string name="title_bateria">69%</string>
+    <string name="title_titulo_pantalla_inicio">Inicio</string>
 </resources>
