La barra de navegación inferior ya está lista. Pero la barra superior queda oculta abajo del fragment, aún no le encuentro solución. Nosé si será mejor descartar la Toolbar.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="title_consejo">Consejo</string>
     <string name="title_mas">Más</string>
     <string name="title_hora">01:39</string>
-    <string name="title_bateria">69%</string>
+    <string name="title_porcentaje_bateria">69%</string>
     <string name="title_titulo_pantalla_inicio">Inicio</string>
+    <string name="volver">Volver</string>
+    <string name="bateria">Batería</string>
+    <string name="linterna">Linterna</string>
+    <string name="configuracion">Configuración</string>
 </resources>
