Cambios: El color de la toolbar ahora es gris. Se añadió la sección de noticias. Se añadieron dependencias nuevas. Se añadió un icono para la app. (sujeta a cambios según decisión del grupo).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="bateria">Batería</string>
     <string name="linterna">Linterna</string>
     <string name="configuracion">Configuración</string>
+    <string name="battery_percentage">%d%%</string>
+    <string name="dolar_compra">Compra: %s</string>
+    <string name="dolar_venta">Venta: %s</string>
+    <string name="dolar_actualizado">Actualizado por última vez: %s</string>
 </resources>
