--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="dolar_actualizado">Actualizado por última vez: %s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="flash">Flash</string>
+    <string name="switch_camera">Cambiar cámara</string>
+    <string name="back">Volver</string>
+    <string name="record">Record</string>
+    <string name="pause">Pause</string>
 </resources>
