--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,15 @@
     <string name="dolar_compra">Compra: %s</string>
     <string name="dolar_venta">Venta: %s</string>
     <string name="dolar_actualizado">Actualizado por última vez: %s</string>
+    <!-- Mapa -->
     <string name="google_maps_key">AIzaSyBBsZKMWcUm2QQ4XOhPCvTv9uwIYTXVOzQ</string>
+    <!-- Camara y grabadora -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="flash">Flash</string>
+    <string name="switch_camera">Cambiar cámara</string>
+    <string name="back">Volver</string>
+    <string name="record">Record</string>
+    <string name="pause">Pause</string>
+    <string name="resume">Resume</string>
+    <string name="stop">Stop</string>
 </resources>
