Preparando precios de referencia.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Trabajo 1</string>
     <string name="title_inicio">Inicio</string>
     <string name="title_chat">Chat</string>
-    <string name="title_consejo">Consejo</string>
+    <string name="title_precios">Precios</string>
     <string name="title_mas">Más</string>
     <string name="title_hora">01:39</string>
     <string name="title_porcentaje_bateria">69%</string>
