Cambios: * Intenté mejorar los estilos pero fallé miserablemente jaja, lo dejé hardcodeado. * Agregué el fragmento de configuraciones, falta programarlo, para poder agregar o quitar la autenticacion por huella digital. * Los precios de referencia funcionan bien y se pueden cambiar haciendo un PUT desde postman. *Se acomodó el código en el main activity, se agregó la función de detectar la huella, se añadieron algunos comentarios.
Lo que sigue:
*Terminar de ajustar algunas cosas como los textos hardcodeados.
*Añadir dos o tres configuraciones.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,21 @@
     <string name="pause">Pause</string>
     <string name="resume">Resume</string>
     <string name="stop">Stop</string>
+    <string name="escribe_un_mensaje">Escribe un mensaje</string>
+    <string name="boton_enviar_mensaje">boton enviar mensaje</string>
+    <string name="d_lar_oficial">Dólar Oficial</string>
+    <string name="compra">Compra: -</string>
+    <string name="venta">Venta: -</string>
+    <string name="actualizado">Actualizado: -</string>
+    <string name="ingresar_direcci_n">Ingresar dirección</string>
+    <string name="buscar">Buscar</string>
+    <string name="guardar">Guardar</string>
+    <string name="mapa">Mapa</string>
+    <string name="grabadora">Grabadora</string>
+    <string name="video_camara">Video camara</string>
+    <string name="configuraciones">Configuraciones</string>
+    <string name="mapa_">Mapa</string>
+    <string name="grabadora_">Grabadora</string>
+    <string name="camara_mas">Camara</string>
+    <string name="configuraciones_mas">Configuraciones</string>
 </resources>
