--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="grabadora_">Grabadora</string>
     <string name="camara_mas">Camara</string>
     <string name="configuraciones_mas">Configuraciones</string>
+    <string name="medidor_mas">Medidor</string>
 </resources>
